--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\Resources.Designer.cs" />
     <Compile Include="Tools\Base64.cs" />
     <Compile Include="Tools\Item.cs" />
+    <Compile Include="Tools\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form\InputBox.resx">
