fix: 修改生成事件

--- a/EditorEX.csproj
+++ b/EditorEX.csproj
@@ -78,7 +78,11 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy /Y /R "$(TargetDir)Core.dll" "$(SolutionDir)dict\" || exit /b /1
 xcopy /Y /R "$(TargetDir)Runtime.dll" "$(SolutionDir)dict\" || exit /b /1
-xcopy /Y /R "$(TargetDir)$(TargetFileName)" "$(SolutionDir)dict\" || exit /b /1
+xcopy /Y /R "$(TargetDir)EditorEX.dll" "$(SolutionDir)dict\" || exit /b /1
+xcopy /Y /R "$(TargetDir)Core.pdb" "$(SolutionDir)dict\" || exit /b /1
+xcopy /Y /R "$(TargetDir)Runtime.pdb" "$(SolutionDir)dict\" || exit /b /1
+xcopy /Y /R "$(TargetDir)EditorEX.pdb" "$(SolutionDir)dict\" || exit /b /1
+
 </PostBuildEvent>
   </PropertyGroup>
 </Project>
