--- a/Runtime/Runtime.csproj
+++ b/Runtime/Runtime.csproj
@@ -54,8 +54,9 @@
     <Compile Include="BehaviourEX\UUIDBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script\Message.cs" />
-    <Compile Include="Tools\UnityLogger.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Tools\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
