--- a/Runtime/Runtime.csproj
+++ b/Runtime/Runtime.csproj
@@ -55,9 +55,8 @@
     <Compile Include="BehaviourEX\UUIDBehavior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Script\Message.cs" />
+    <Compile Include="Tools\ItemAdd.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Tools\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
